Adding Devon as a developer on the project due to his contributions.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@ limitations under the License.
       <name>Jason Rose</name>
       <email>jasoncrose@gmail.com</email>
     </developer>
+    <developer>
+      <id>devon.tackett</id>
+      <name>Devon Tackett</name>
+      <email>devon.tackett@gmail.com</email>
+    </developer>
   </developers>
   
   <dependencyManagement>
