--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@ limitations under the License.
 
   <groupId>com.github.praxissoftware.rest</groupId>
   <artifactId>com.github.praxissoftware.rest</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>pom</packaging>
 
   <name>Praxis Software - REST</name>
