--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@ limitations under the License.
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>com.github.praxissoftware.poms</groupId>
+        <artifactId>com.github.praxissoftware.poms.testing</artifactId>
+        <version>1.2.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
