--- a/pom.xml
+++ b/pom.xml
@@ -59,19 +59,23 @@ limitations under the License.
     </developer>
   </developers>
   
+  <properties>
+    <praxis.version>1.3.0-SNAPSHOT</praxis.version>
+  </properties>
+  
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>com.github.praxissoftware.poms</groupId>
         <artifactId>com.github.praxissoftware.poms.commons</artifactId>
-        <version>1.2.0</version>
+        <version>${praxis.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.github.praxissoftware.poms</groupId>
         <artifactId>com.github.praxissoftware.poms.testing</artifactId>
-        <version>1.2.0</version>
+        <version>${praxis.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
