--- a/com.github.praxissoftware.rest.core/pom.xml
+++ b/com.github.praxissoftware.rest.core/pom.xml
@@ -19,7 +19,7 @@ limitations under the License.
   <parent>
     <artifactId>com.github.praxissoftware.rest</artifactId>
     <groupId>com.github.praxissoftware.rest</groupId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
