--- a/com.github.praxissoftware.rest.core/pom.xml
+++ b/com.github.praxissoftware.rest.core/pom.xml
@@ -31,8 +31,8 @@ limitations under the License.
   
   <dependencies>
     <dependency>
-      <groupId>com.googlecode.guava-osgi</groupId>
-      <artifactId>guava-osgi</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
